plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.1'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'tricode'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// JWT 관련 라이브러리
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'

	// AWS S3 연동
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	// STT 연동
	implementation 'org.springframework.boot:spring-boot-starter-json'
	implementation 'org.apache.httpcomponents:httpclient:4.5.13'
	implementation 'org.apache.httpcomponents:httpmime:4.5.13'
	implementation 'commons-io:commons-io:2.11.0'
	implementation 'org.springframework:spring-test'

	// JSON 처리 관련 라이브러리
	implementation 'com.fasterxml.jackson.core:jackson-databind'
	implementation 'org.json:json:20230227'

	// 로깅 관련 라이브러리
	implementation 'org.slf4j:slf4j-api:2.0.0'
	implementation 'ch.qos.logback:logback-classic:1.4.4'
	implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
	implementation 'org.apache.logging.log4j:log4j-core:2.20.0'

	// ChatGPT API 연동
	implementation 'io.github.flashvayne:chatgpt-spring-boot-starter:1.0.4'
}

tasks.named('test') {
	useJUnitPlatform()
}

bootJar {
	archiveClassifier.set("") // 실행 가능한 JAR 파일만 생성
}

jar {
	enabled = false // plain.jar 생성 비활성화
}
